improvements and deploying in cloudflare
